form and validation function added

--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
       <p>Welcome! <br/><br/> 
          (to our website)</p>
     </div>
+    <div class="main_content">
+        <form id="practice_form" action="index.html"
+              onsubmit="check_form();">
+            <p> Please enter your...
+                <input type="text" id="name" placeholder="Name"> <br\>
+                <input type="text" id="city" placeholder="City">
+                <input type="text" id="food" placeholder="Favorite Food">
+                <input type="submit" value="Submit">
+            </p>
+        </form>
+    </div>
   </body>
 </html>
