add div for form results

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
             </p>
         </form>
     </div>
+    <div class="main_content" id="results">
+    	<p>Who has already been here?</p>
+    </div>
   </body>
 </html>
