grab data from form

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </form>
     </div>
     <div class="main_content" id="results">
-    	<p>Who has already been here?</p>
+    	<p id="results_header">Who has already been here?</p>
     </div>
   </body>
 </html>
