change form html to call check_form() on click
submit tries to communicate with a server and then refresh. We do not have
a server to send the info to, so refreshing will cause the loss of all the
data.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </div>
     <div class="main_content">
         <form id="practice_form" action="index.html"
-              onsubmit="check_form();">
+              onsubmit="return false">
             <p> Please enter your...
                 <input type="text" id="name" placeholder="Name"> <br\>
                 <input type="text" id="city" placeholder="City">
                 <input type="text" id="food" placeholder="Favorite Food">
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" onclick="check_form();">
             </p>
         </form>
     </div>
